Fix: corrects footprints positioning and removes overflow

--- a/public/css/suscripcion.css
+++ b/public/css/suscripcion.css
@@ -1,6 +1,7 @@
 *{
     padding: 0;
     margin: 0;
+    box-sizing: border-box
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700&display=swap');
@@ -19,12 +20,15 @@ body {
 }
 
 .subscribe {
-    display: flex;
+  position: relative;
+  display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+  overflow: hidden;
 	background: #5c4a6d;
-	width: 945px;
+  width: 100%;
+  max-width: 945px;
 	height: 474px;
 	border-radius: 10px;
 	box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2)
@@ -90,111 +94,109 @@ body {
 
 .Huella404{
     position: absolute;
-    top: calc(100% - 140px);
-    left: 240px;
+    top: calc(100% - 77px);
+    left: 20px;
 }
 
 .Huelle404{
     position: absolute;
-    top: 90px;
-    right:240px;
+    top: -15px;
+    right:20px;
     transform: rotate(180deg);
 }
 
 /* | HEADER | */
 
 .Header {
-    position: relative;
-    font-weight: bolder;
-    padding: 20px;
-    width: 100%;
-    backdrop-filter: blur(3px);
-    font-size: 16px;
-    background: #4e4083;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    box-shadow: 0 -5px 33px rgba(0, 0, 0, 0.5);
-  }
-  
-  .Header nav {
-    display: flex;
-    align-items: center;
-    margin: auto;
-    width: max-content;
-  }
-  
-  .Logo {
-    position: absolute;
-    color: #dbdbdb;
-  }
-  
-  .Header ul li {
-    display: inline-block;
-    position: relative;
-    color: rgb(255, 255, 255);
-  }
-  
-  .Header ul li::after {
-    content: '';
-    height: 3px;
-    border-radius: 10px;
-    width: 0;
-    background: #eeb8ff;
-    position: absolute;
-    left: 0;
-    bottom: -10px;
-    transition: 0.5;
-  }
-  
-  .Header ul li:hover::after {
-    width: 100%;
-  }
-  
-  a {
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    font-weight: 500;
-  }
-  
-  .nav-login {
-    position: absolute;
-    right: 30px;
-    top: 50%;
-    transform: translate(0, -50%);
-  }
-  
-  .svg-login {
-    height: 18px;
-    margin-bottom: -3px;
-  }
-  
-  .Navegacion {
-    display: flex;
-    align-items: center;
-    padding: 0 20px;
-    margin: auto;
-    gap: 50px;
-    list-style: none;
-  }
-  
-  .nav-link-Hom {
-    margin-right: 300px;
-    color: black;
-  }
-  
-  
-  .Cabeza {
-    display: flex;
-    background: #4e4083;
-    color: rgb(255, 255, 255);
-    flex-direction: column;
-    align-items: center;
-    margin: 0 15px 20px 15px;
-    border-radius: 0px 0px 10px 10px;
-    padding-top: 50px;
-    padding-bottom: 40px;
-    font-size: 30px;
-    box-shadow: 0 -5px 33px rgba(0, 0, 0, 0.5);
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-  
-  /* | FIN HEADER | */
+  position: relative;
+  padding: 20px;
+  width: 100%;
+  backdrop-filter: blur(3px);
+  font-size: 16px;
+  background: #142433;
+  box-shadow: 0 -5px 33px rgba(0, 0, 0, 0.5);
+}
+
+.Header nav {
+  display: flex;
+  align-items: center;
+  margin: auto;
+  width: max-content;
+}
+
+.Logo {
+  position: absolute;
+  color: #dedede;
+}
+
+.Header ul li {
+  display: inline-block;
+  position: relative;
+  color: rgb(255, 255, 255);
+}
+
+.Header ul li::after {
+  content: '';
+  height: 3px;
+  border-radius: 10px;
+  width: 0;
+  background: #dedede;
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  transition: 0.5;
+}
+
+.Header ul li:hover::after {
+  width: 100%;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  font-weight: 500;
+}
+
+.nav-login {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translate(0, -50%);
+}
+
+.svg-login {
+  height: 18px;
+  margin-bottom: -3px;
+}
+
+.Navegacion {
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+  margin: auto;
+  gap: 50px;
+  list-style: none;
+}
+
+.nav-link-Hom {
+  margin-right: 300px;
+  color: black;
+}
+
+
+.Cabeza {
+  display: flex;
+  background: #142433;
+  color: rgb(255, 255, 255);
+  flex-direction: column;
+  align-items: center;
+  margin: 0 15px 20px 15px;
+  border-radius: 0px 0px 10px 10px;
+  padding-top: 50px;
+  padding-bottom: 40px;
+  font-size: 30px;
+  box-shadow: 0 -5px 33px rgba(0, 0, 0, 0.5);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+/* | FIN HEADER | */
